@@ -1,5 +1,13 @@
 2005-10-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 
+	* server-src/conffile.c: dpcur.s_split_diskbuffer must be initialize
+	  to 0.
+	* server-src/reporter.c (handle_partial): Set repdata to the result
+	  of handle_success.
+	* server-src/taper.c: Set the first-file.
+
+2005-10-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
 	* client-src/client_util.c, server-src/amcheck.c,
 	  server-src/reporter.c: Add missing type for arguments.
 
